--- a/index.html
+++ b/index.html
@@ -20,23 +20,36 @@
             <img src="imgs/" alt="">
             <div class="menu">
                 <ul>
-                    <li> <a href="" style="color: rgb(9, 248, 9);">Home</a></li>
+                    <li> <a href="#" style="color: rgb(9, 248, 9);">Home</a></li>
                     <li> <a href="/page/about.html">About</a></li>
-                    <li> <a href="">Project</a></li>
-                    <li> <a href="">Contact</a></li>
+                    <li> <a href="/page/project.html">Project</a></li>
+                    <li> <a href="/page/contact.html">Contact</a></li>
                 </ul>
             </div>
         </header>
         <div class="text">
-            <h1>PHON NIKEV</h1>
-            <h2>I'm Developer</h2>
-
-                <input type="submit" value="About Me">
-
+            <div class="textii">
+                <h1>PHON NIKEV</h1>
+                <h2>I'm Developer and designer on figma</h2>
+               <button><a href="/page/about.html">ABOUT ME</a></button>
+            </div>
         </div>
         <footer>
            <div class="boxlogo"></div>
+           <div class="icon">
+            <a href=""><i class="fa-brands fa-facebook"></i>NIkev</a>
+           </div>
+           <div class="icon">
+            <a href=""><i class="fa-solid fa-paper-plane"></i>0967583906</a>
+           </div>
+           <div class="icon">
+            <a href=""><i class="fa-brands fa-discord"></i>phonnikev</a>
+           </div>
+           <div class="icon">
+            <h2>BY TO PHON NIKEV</h2>
+           </div>
         </footer>
     </div>
 </body>
-</html># project1
+</html>
+# project2
