--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kavoon&family=New+Rocker&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <div class="home">
         <header>
             <div class="logo"></div>
-            <img src="imgs/" alt="">
             <div class="menu">
                 <ul>
                     <li> <a href="#" style="color: rgb(9, 248, 9);">Home</a></li>
-                    <li> <a href="/page/about.html">About</a></li>
-                    <li> <a href="/page/project.html">Project</a></li>
-                    <li> <a href="/page/contact.html">Contact</a></li>
+                    <li> <a href="page/about.html">About</a></li>
+                    <li> <a href="page/project.html">Project</a></li>
+                    <li> <a href="page/contact.html">Contact</a></li>
                 </ul>
             </div>
         </header>
@@ -52,5 +51,4 @@
     </div>
 </body>
 </html>
-# project2
 # project1
